--- a/ffmpeg-camera-encode/build.gradle
+++ b/ffmpeg-camera-encode/build.gradle
@@ -1,7 +1,7 @@
 apply from: "$rootDir/module.gradle"
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile project(':libyuv-single')
+    implementation project(':libyuv-single')
 }
