--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,5 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Sun Jun 30 14:11:11 CST 2019
-systemProp.http.proxyHost=127.0.0.1
-systemProp.http.proxyPort=8787
+#systemProp.http.proxyHost=127.0.0.1
+#systemProp.http.proxyPort=8787
