--- a/settings.gradle
+++ b/settings.gradle
@@ -1,17 +1,17 @@
-include ':ffmpeg-single-swscale', ':ffmpeg-audio-encode', ':ffmpeg-muxer-code', ':common-avcapture', ':audio-opensles', ':common-static'
-include ':ffmpeg-multiple-hello'
-include ':sdl2-hello'
-include ':ffmpeg-single-decode'
-include ':ffmpeg-single-cmd'
-include ':common-asserts'
-include ':ffmpeg-single-play'
-include ':audio-lame-encode'
+//include ':ffmpeg-single-swscale', ':ffmpeg-audio-encode', ':ffmpeg-muxer-code', ':common-avcapture', ':audio-opensles', ':common-static'
+//include ':ffmpeg-multiple-hello'
+//include ':sdl2-hello'
+//include ':ffmpeg-single-decode'
+//include ':ffmpeg-single-cmd'
+//include ':common-asserts'
+//include ':ffmpeg-single-play'
+//include ':audio-lame-encode'
 include ':ffmpeg-camera-encode'
 include ':libyuv-single'
-include ':ffmpeg-camera-stream'
+//include ':ffmpeg-camera-stream'
 include ':common'
-include ':ffmpeg-multiple'
+//include ':ffmpeg-multiple'
 include ':ffmpeg-single'
-include ':ffmpeg-single-hello'
-include ':ffmpeg-stream-mp4'
-include ':mediacodec-audio'
+//include ':ffmpeg-single-hello'
+//include ':ffmpeg-stream-mp4'
+//include ':mediacodec-audio'
