--- a/ffmpeg-camera-encode/src/main/AndroidManifest.xml
+++ b/ffmpeg-camera-encode/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.onzhou.ffmpeg.main.CameraSurfaceActivity">
+        <activity android:name="com.onzhou.ffmpeg.main.CameraSurfaceActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
