--- a/ffmpeg-audio-encode/src/main/AndroidManifest.xml
+++ b/ffmpeg-audio-encode/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.onzhou.audio.main.AudioEncodeActivity">
+        <activity android:name="com.onzhou.audio.main.AudioEncodeActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
